# sha256fast

./: .gitignore  Makefile  main.cxx  sha.hxx  sha256-avx-asm.S  sha256-avx.cxx  sha256-avx2-asm.S  sha256-ssse3-asm.S
bindings/rust/: Cargo.toml  build.rs  rustfmt.toml
bindings/rust/benches/: benches.rs
bindings/rust/src/: bindings.rs  lib.rs  main.rs
old/: main.rs  rustfmt.toml  sha256  sha256-avx2.rs  sha256-sse.rs
src/: Makefile  sha256-avx2-asm.S  sha256-avx2.cxx  sha256-generic.cxx  sha256-ssse3.cxx  sha256_ni_asm.S
